--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,9 @@
 language: java
 dist: trusty
 addons:
-  chrome: stable
+  browserstack:
+    username: "miteshsavani1"
+    access_key: "Jp3Wo9CMsi6koFeQ3pfP"
 before_install : 
  - mkdir ../.zcs-deps
  - cd /home/travis/build/miteshsavani/zm-selenium
@@ -14,8 +16,6 @@ before_install :
  - cd ../zm-mailbox
  - ant publish-local-all -Dzimbra.buildinfo.version=8.7.6_GA
  - cd ../zm-selenium
- - # start your web application and listen on `localhost`
- - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
 cache: 
  directories:
   - /home/travis/.ivy2/cache
