--- a/.travis.yml
+++ b/.travis.yml
@@ -4,19 +4,30 @@ addons:
   browserstack:
     username: "miteshsavani1"
     access_key: "Jp3Wo9CMsi6koFeQ3pfP"
-before_install : 
- - mkdir ../.zcs-deps
- - pwd
- - cd /home/travis/build/miteshsavani/zm-selenium
- - git clone https://github.com/Zimbra/zm-ajax.git ../zm-ajax
- - git clone https://github.com/Zimbra/zimbra-package-stub.git ../zimbra-package-stub
- - git clone https://github.com/Zimbra/zm-mailbox.git ../zm-mailbox
- - git clone https://github.com/Zimbra/zm-zcs.git ../zm-zcs
- - git clone https://github.com/Zimbra/zm-web-client.git ../zm-web-client
- - git clone https://github.com/Zimbra/zm-zimlets.git ../zm-zimlets
- - cd ../zm-mailbox
- - ant publish-local-all -Dzimbra.buildinfo.version=8.7.6_GA
- - cd ../zm-selenium
+before_install :
+ - cd /tmp;
+ - wget http://downloads.sourceforge.net/tcl/tcl8.4.18-src.tar.gz /tmp/;
+- tar -xvzf tcl8.4.18-src.tar.gz;
+- cd tcl8.4.18;
+- cd unix;
+- ./configure --prefix=/usr  --enable-threads --mandir=/usr/share/man;
+- make ;
+- sed -i \
+    -e "s@^\(TCL_SRC_DIR='\).*@\1/usr/include'@" \
+    -e "/TCL_B/s@='\(-L\)\?.*unix@='\1/usr/lib@" \
+    -e "/SEARCH/s/=.*/=''/" \
+    tclConfig.sh;
+- cd /tmp;
+- wget  https://sourceforge.net/projects/expect/files/Expect/5.45/expect5.45.tar.gz;
+- tar -xvzf expect5.45.tar.gz;
+- cd expect5.45;
+- ./configure --prefix=/usr \
+            --with-tcl=/usr/lib \
+            --with-tclinclude=/usr/include \
+            --enable-shared ;
+- make;
+- cp /usr/lib/expect5.45libexpect5.45.so /usr/lib/;
+
 cache: 
  directories:
   - /home/travis/.ivy2/cache
