--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ dist: trusty
 before_install:
  - cd /home/travis/build/miteshsavani;
  - wget http://downloads.sourceforge.net/tcl/tcl8.4.18-src.tar.gz;
+ - tar -xvzf tcl8.4.18-src.tar.gz;
  - cd tcl8.4.18;
  - cd unix;
  - ./configure --prefix=/usr  --enable-threads --mandir=/usr/share/man;
