--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,12 @@
 language: java
-sudo: false
-dist: precise
+sudo: required
+dist: trusty
 before_install : 
- - sudo apt-get install python-software-properties software-properties-common
+ - sudo apt-get install software-properties-common 
  - sudo add-apt-repository ppa:openjdk-r/ppa
  - sudo apt-get update
  - sudo update-ca-certificates -f
- - sudo apt-get install openjdk-8-jdk ant ruby git maven build-essential zlib1g-dev
+ - sudo apt-get install openjdk-8-jdk ant ruby git maven build-essential
  - cd /home/travis/build/miteshsavani
  - mkdir installer-build
  - cd installer-build
