--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: required
 dist: trusty
 before_install : 
  - sudo apt-get install software-properties-common 
- - sudo add-apt-repository ppa:openjdk-r/ppa
+ - sudo add-apt-repository -y ppa:openjdk-r/ppa
  - sudo apt-get update
  - sudo update-ca-certificates -f
  - sudo apt-get install openjdk-8-jdk ant ruby git maven build-essential
