--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ jobs:
     working_directory: ~/mitesh-demo
 
     docker:
-      - image: circleci/openjdk:8-jdk-browsers
+      - image: circleci/ubuntu-14.04-XXL-1239-04cfc8d
 
     steps:
 
