--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,5 @@ jobs:
        - checkout
        - run: echo "hello world"
        - run: mkdir ../.zcs-deps
-       - run: 
-         command: |
-            echo download zm-ajax from github
-            git clone https://github.com/Zimbra/zm-ajax.git ../zm-ajax
+       - run: echo download zm-ajax from github
+       - run: git clone https://github.com/Zimbra/zm-ajax.git ../zm-ajax
