--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,6 +8,9 @@ jobs:
        - run: echo "hello world"
        - run: |
             mkdir ../.zcs-deps
+            cd ../.zcs-deps
+            wget http://www.java2s.com/Code/JarDownload/ant-contrib/ant-contrib-1.0b1.jar.zip
+            tar -xvzf ant-contrib-1.0b1.jar.zip
             mkdir ../.ivy2
             cd ../.ivy2
             mkdir cache
