--- a/conf/config.properties
+++ b/conf/config.properties
@@ -27,9 +27,9 @@ browser=*googlechrome
 
 # Zimbra server settings
 server.scheme=https
-server.host=zqa-249.eng.zimbra.com
-mta.host=zqa-249.eng.zimbra.com
-store.host=zqa-249.eng.zimbra.com
+server.host=localhost
+mta.host=localhost
+store.host=localhost
 server.port=443
 admin.port=7071
 
