--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,12 +4,13 @@ jobs:
      docker:
        - image: zimbra/zcs-foss
      steps:
-       - checkout
-       - run: echo "hello world"
        - run: |
             apt-get install git
             apt-get install wget
             apt-get install ant
+       - checkout
+       - run: echo "hello world"
+       - run: |
             mkdir ../.zcs-deps
             cd ../.zcs-deps
             wget http://www.java2s.com/Code/JarDownload/ant-contrib/ant-contrib-1.0b1.jar.zip
