--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,8 @@ jobs:
             git clone https://github.com/Zimbra/zm-zimlets.git ../zm-zimlets
             cd ../zm-mailbox
             ant publish-local-all -Dzimbra.buildinfo.version=8.7.6_GA
-            cd ~/zm-selenium
+            git clone https://github.com/miteshsavani/zm-selenium.git
+            cd ../zm-selenium
             ant Run-ExecuteHarnessMain
             - save_cache:
                  key: v1-myapp-cache
