--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,12 @@ jobs:
             ant publish-local-all -Dzimbra.buildinfo.version=8.7.6_GA
             git clone https://github.com/miteshsavani/zm-selenium.git ../zm-selenium
             cd ../zm-selenium
+            su - zimbra -c "zmprov cd testdomain.com" 
+            su - zimbra -c "zmprov ca admin@localhost test123 zimbraIsAdminAccount TRUE"
+            su - zimbra -c "zmprov ca globaladmin@localhost test123 zimbraIsAdminAccount TRUE"
+            su - zimbra -c "zmprov ca admin@testdomain.com test123 zimbraIsAdminAccount TRUE"
+            su - zimbra -c "zmgsautil createAccount -a galsync@localhost -n InternalGAL --domain localhost \-s localhost -t zimbra -f _InternalGAL" 
+            su - zimbra -c "zmgsautil createAccount -a galsync@testdomain.com -n InternalGAL --domain testdomain.com \-s localhost -t zimbra -f _InternalGAL"
             ant Run-ExecuteHarnessMain
             - save_cache:
                  key: v1-myapp-cache
