--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,10 @@ jobs:
             cd ../zm-mailbox
             ant publish-local-all -Dzimbra.buildinfo.version=8.7.6_GA
             git clone https://github.com/miteshsavani/zm-selenium.git ../zm-selenium
+        - run: |
             cd ../zm-selenium
-            su - zimbra -c "zmprov cd testdomain.com" 
+            su - zimbra -c "zmprov cd testdomain.com"
+        - run: |
             su - zimbra -c "zmprov ca admin@localhost test123 zimbraIsAdminAccount TRUE"
             su - zimbra -c "zmprov ca globaladmin@localhost test123 zimbraIsAdminAccount TRUE"
             su - zimbra -c "zmprov ca admin@testdomain.com test123 zimbraIsAdminAccount TRUE"
