--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,6 @@ jobs:
        - run: cd /tmp && tar -xzvf zcs.tgz && ls
        - run: cd /tmp/zcs-8.8.3_GA_1872.UBUNTU14_64.20170905143325
        - run: echo "resolvconf resolvconf/linkify-resolvconf boolean false" | debconf-set-selections
-       - run: cd /tmp/zcs-8.8.3_GA_1872.UBUNTU14_64.20170905143325 && sed -i.bak 's/checkRequired/# checkRequired/' install.sh && sudo ./install.sh -s -x --skip-upgrade-check < ~/zm-selenium/.circleci/software-install-responses
-       - run: cd /opt/zimbra/libexec && ls && sudo ./zmsetup.pl
+       - run: cd /tmp/zcs-8.8.3_GA_1872.UBUNTU14_64.20170905143325 && sed -i.bak 's/checkRequired/# checkRequired/' install.sh && sudo ./install.sh -s -x --skip-upgrade-check < ~/zm-selenium/.circleci/installsingle
        - run: su - zimbra -c 'zmcontrol status'
 
