--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,9 +5,9 @@ jobs:
        - image: circleci/ubuntu-server
      working_directory: ~/zm-selenium
      steps:
-       - checkout
-       - run: apt-get update && apt-get install -y sudo && rm -rf /var/lib/apt/lists/* && apt-get -qq update
+       - run: apt-get update && apt-get install -y git && apt-get install -y sudo && rm -rf /var/lib/apt/lists/* && apt-get -qq update
        - run: sudo apt-get install -y curl;
+       - checkout
        - run: curl -s -k -o /tmp/zcs.tgz 'https://files.zimbra.com.s3.amazonaws.com/downloads/8.8.3_GA/zcs-8.8.3_GA_1872.UBUNTU14_64.20170905143325.tgz'
        - run: cd /tmp && tar -xzvf zcs.tgz && ls
        - run: cd /tmp/zcs-8.8.3_GA_1872.UBUNTU14_64.20170905143325
