--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,17 +2,7 @@ version: 2
 jobs:
    build:
      docker:
-       - image: circleci/ubuntu-server
+       - image: zimbra/zcs-foss:latest
      working_directory: ~/zm-selenium
      steps:
-       - run: sudo apt-get update && apt-get install -y git && apt-get install -y sudo && rm -rf /var/lib/apt/lists/* && apt-get -qq update
-       - run: sudo apt-get install -y curl;
-       - checkout
-       - run: curl -s -k -o /tmp/zcs.tgz 'https://files.zimbra.com.s3.amazonaws.com/downloads/8.8.3_GA/zcs-8.8.3_GA_1872.UBUNTU14_64.20170905143325.tgz'
-       - run: cd /tmp && tar -xzvf zcs.tgz && ls
-       - run: cd /tmp/zcs-8.8.3_GA_1872.UBUNTU14_64.20170905143325
-       - run: echo "resolvconf resolvconf/linkify-resolvconf boolean false" | debconf-set-selections
-       - run: cd /tmp/zcs-8.8.3_GA_1872.UBUNTU14_64.20170905143325 && sed -i.bak 's/checkRequired/# checkRequired/' install.sh && sudo bash -x install.sh -s -x --skip-upgrade-check  ~/zm-selenium/.circleci/installsingle
-       - run: cd /opt/zimbra/libexec && ls && sudo ./zmsetup.pl < ~/zm-selenium/.circleci/input
        - run: su - zimbra -c 'zmcontrol status'
-
