--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,6 @@ jobs:
        - image: zimbra/zcs-foss:latest
      working_directory: ~/zm-selenium
      steps:
+       - run: sudo apt-get update && apt-get install -y git && apt-get install -y sudo
        - checkout
        - run: cd /opt/zimbra/libexec && ls && sudo ./zmsetup.pl < ~/zm-selenium/.circleci/installsingle
