--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,4 +7,4 @@ jobs:
      steps:
        - run: sudo apt-get update && apt-get install -y git && apt-get install -y sudo
        - checkout
-       - run: cd /opt/zimbra/libexec && ls && sudo ./zmsetup.pl < ~/zm-selenium/.circleci/installPL
+       - run: cd /opt/zimbra/libexec && ls && sudo ./zmsetup.pl -c ~/zm-selenium/.circleci/installPL
