--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,6 +5,33 @@ jobs:
        - image: zimbra/zcs-foss:latest
      working_directory: ~/zm-selenium
      steps:
-       - run: sudo apt-get update && apt-get install -y git && apt-get install -y sudo
+       - run: sudo apt-get update && apt-get install -y git && apt-get install -y sudo && apt-get install -y ant
        - checkout
        - run: cd /opt/zimbra/libexec && ls && sudo ./zmsetup.pl -c ~/zm-selenium/.circleci/installPL
+	   - run: |
+            mkdir ../.zcs-deps
+            cd ../.zcs-deps
+            wget http://www.java2s.com/Code/JarDownload/ant-contrib/ant-contrib-1.0b1.jar.zip
+            unzip -a ant-contrib-1.0b1.jar.zip
+            mkdir ../.ivy2
+            cd ../.ivy2
+            mkdir cache
+            echo download zm-ajax from github
+       - run: |
+            git clone https://github.com/Zimbra/zm-ajax.git ../zm-ajax
+            git clone https://github.com/Zimbra/zimbra-package-stub.git ../zimbra-package-stub
+            git clone https://github.com/Zimbra/zm-mailbox.git ../zm-mailbox
+            git clone https://github.com/Zimbra/zm-zcs.git ../zm-zcs
+            git clone https://github.com/Zimbra/zm-web-client.git ../zm-web-client
+            git clone https://github.com/Zimbra/zm-zimlets.git ../zm-zimlets
+            cd ../zm-mailbox
+            ant publish-local-all -Dzimbra.buildinfo.version=8.7.6_GA
+            git clone https://github.com/miteshsavani/zm-selenium.git ../zm-selenium
+            cd ../zm-selenium
+            su - zimbra -c "zmprov cd testdomain.com" 
+            su - zimbra -c "zmprov ca admin@localhost test123 zimbraIsAdminAccount TRUE"
+            su - zimbra -c "zmprov ca globaladmin@localhost test123 zimbraIsAdminAccount TRUE"
+            su - zimbra -c "zmprov ca admin@testdomain.com test123 zimbraIsAdminAccount TRUE"
+            su - zimbra -c "zmgsautil createAccount -a galsync@localhost -n InternalGAL --domain localhost \-s localhost -t zimbra -f _InternalGAL" 
+            su - zimbra -c "zmgsautil createAccount -a galsync@testdomain.com -n InternalGAL --domain testdomain.com \-s localhost -t zimbra -f _InternalGAL"
+            ant Run-ExecuteHarnessMain
